--- a/templates/components/footer/footer.html.twig
+++ b/templates/components/footer/footer.html.twig
@@ -31,10 +31,27 @@
 					<i class="mr-2 fa-solid fa-paper-plane"></i>Nous envoyer un message</a>
 				<p class="p">
 					<i class="mr-2 fa-solid fa-house"></i>Nous rendre visite :
-					<br>
-					9 place Mireio
-					<br>
-					30420 Calvisson
+
+					<span class="text-base leading-relaxed text-gray-300">
+
+						<br>
+						9 place Mireio
+						<br>
+						30420 Calvisson
+					</span>
+				</p>
+				<p class="p">
+					<i class="mt-6 mr-2 fa-solid fa-clock"></i>Horaires d'ouverture :
+					<span class="text-base leading-relaxed text-gray-300">
+						<br>
+						du mardi au vendredi :
+						<br>
+						6h30-13h00 /16h00-19h00
+						<br>
+						samedi & dimanche :
+						<br>
+						7h00-13h00
+					</span>
 				</p>
 			</div>
 			<div class="grid grid-cols-2 gap-8 mt-2 sm:gap-6 sm:grid-cols-3">
