--- a/templates/components/links/links.html.twig
+++ b/templates/components/links/links.html.twig
@@ -45,8 +45,8 @@
 					</p>
 					<p class="text-base leading-relaxed text-gray-500 ">
 						Horaires : <br>
-						lundi, mardi, jeudi, vendredi et samedi de 6h30 à 18h00 <br>
-						le dimanche de 7h à 13h13
+						mardi au vendredi : 6h30-13h00 /16h00-19h00 <br>
+						samedi & dimanche : 7h00-13h00
 					</p>
 				</div>
 				<!-- Modal footer -->
